--- a/src/public/pages/sidebar.html
+++ b/src/public/pages/sidebar.html
@@ -5,14 +5,14 @@
 		<!-- sidebar menu: : style can be found in sidebar.less -->
 		<ul class="sidebar-menu">
 			<li class="header">Menu Principal</li>
-			<li class="active"><a href="documentation/index.html"><i class="fa fa-dashboard"></i> <span>Painel Principal</span></a></li>
+			<li class="active"><a data-ui-sref="dashboard"><i class="fa fa-dashboard"></i> <span>Painel Principal</span></a></li>
 			<li class="treeview">
 				<a href="#">
 					<i class="fa fa-book"></i> <span>Documentação</span> <i class="fa fa-angle-left pull-right"></i>
 				</a>
 				<ul class="treeview-menu">
-					<li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Geral</a></li>
-					<li><a href="index2.html"><i class="fa fa-circle-o"></i> Artísticos</a></li>
+					<li class="active"><a data-ui-sref="documentations_general"><i class="fa fa-circle-o"></i> Geral</a></li>
+					<li><a data-ui-sref="documentations_artistic"><i class="fa fa-circle-o"></i> Artísticos</a></li>
 				</ul>
 			</li>
 			<li class="treeview">
