Inserindo o 'edit in place' no cadastro de perfis

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -115,6 +115,8 @@
     <script src="vendors/angular-aria/angular-aria.min.js"></script>
 	<!-- Angular UI Route -->
 	<script src="vendors/angular-ui-router/release/angular-ui-router.js"></script>
+	<!-- Angular xeditable -->
+	<script src="vendors/angular-xeditable/dist/js/xeditable.js"></script>
     <!-- endbuild -->
 
     <!-- build:app app/app.js -->
@@ -122,6 +124,8 @@
     <script src="../app/app.module.js"></script>
     <script src="../app/dashboard/dashboard.controller.js"></script>
     <script src="../app/ente/ente.controller.js"></script>
+    <script src="../app/documentations/documentations.controller.js"></script>
+    <script src="../app/profile/profile.controller.js"></script>
     <!-- endbuild -->
 
     <script src="app/html/templates.js"></script>
