--- a/src/public/pages/sidebar.html
+++ b/src/public/pages/sidebar.html
@@ -29,6 +29,7 @@
 	<li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Cantor Solo</span></a></li>
 	<li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Banda AC/DC</span></a></li>
 	<li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Serginho do Forró</span></a></li>
+	<li class="active"><a data-ui-sref="profile_new"><i class="fa fa-plus"></i> <span>Adicionar Perfil</span></a></li>
 </ul>
 		</section>
 		<!-- /.sidebar -->
