Definir edit in place para avatar do perfil

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -117,6 +117,8 @@
 	<script src="vendors/angular-ui-router/release/angular-ui-router.js"></script>
 	<!-- Angular xeditable -->
 	<script src="vendors/angular-xeditable/dist/js/xeditable.js"></script>
+	<!-- Ng File Upload -->
+	<script src="vendors/ng-file-upload/ng-file-upload.js"></script>
     <!-- endbuild -->
 
     <!-- build:app app/app.js -->
