Integrando cadastro de entes com a API

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="vendors/morris.js/morris.css">
     <!-- jvectormap -->
     <link rel="stylesheet" href="vendors/jvectormap/jquery-jvectormap.css">
+	<!-- Intro.JS-->
+	<link rel="stylesheet" href="vendors/intro.js/introjs.css"></link>
     <!--
         TODO: Nao instalado devido ao erro de instalacao do jquery skob
         <link rel="stylesheet" href="vendors/daterangepicker/daterangepicker-bs3.css">
@@ -119,14 +121,24 @@
 	<script src="vendors/angular-xeditable/dist/js/xeditable.js"></script>
 	<!-- Ng File Upload -->
 	<script src="vendors/ng-file-upload/ng-file-upload.js"></script>
+	<!-- Intro.JS-->
+	<script src="vendors/intro.js/intro.js"></script>
+	<!-- Angular Intro.JS-->
+	<script src="vendors/angular-intro.js/build/angular-intro.min.js"></script>
     <!-- endbuild -->
 
     <!-- build:app app/app.js -->
     <!-- Angular App -->
     <script src="../app/app.module.js"></script>
+
+    <script src="../app/dashboard/header.controller.js"></script>
     <script src="../app/dashboard/dashboard.controller.js"></script>
+
     <script src="../app/ente/ente.controller.js"></script>
+    <script src="../app/ente/ente.service.js"></script>
+
     <script src="../app/documentations/documentations.controller.js"></script>
+
     <script src="../app/profile/profile.controller.js"></script>
     <!-- endbuild -->
 
