--- a/src/public/pages/sidebar.html
+++ b/src/public/pages/sidebar.html
@@ -6,7 +6,7 @@
 		<ul class="sidebar-menu">
 			<li class="header">Menu Principal</li>
 			<li class="active"><a data-ui-sref="dashboard"><i class="fa fa-dashboard"></i> <span>Painel Principal</span></a></li>
-			<li class="treeview">
+			<li class="treeview documentation">
 				<a href="#">
 					<i class="fa fa-book"></i> <span>Documentação</span> <i class="fa fa-angle-left pull-right"></i>
 				</a>
@@ -15,7 +15,7 @@
 					<li><a data-ui-sref="documentations_artistic"><i class="fa fa-circle-o"></i> Artísticos</a></li>
 				</ul>
 			</li>
-			<li class="treeview">
+			<li class="treeview editais">
 				<a href="#">
 					<i class="fa fa-files-o"></i>
 					<span>Editais <span class="label label-primary">4</span></span> <i class="fa fa-angle-left pull-right"></i>
@@ -26,10 +26,10 @@
 		</ul>
 	</li>
 	<li class="header">Meus Perfis</li>
-	<li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Cantor Solo</span></a></li>
+	<li id="perfil_detail"><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Cantor Solo</span></a></li>
 	<li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Banda AC/DC</span></a></li>
 	<li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Serginho do Forró</span></a></li>
-	<li class="active"><a data-ui-sref="profile_new"><i class="fa fa-plus"></i> <span>Adicionar Perfil</span></a></li>
+	<li class="active" id="add_profile"><a data-ui-sref="profile_new"><i class="fa fa-plus"></i> <span>Adicionar Perfil</span></a></li>
 </ul>
 		</section>
 		<!-- /.sidebar -->
