--- a/src/public/index.html
+++ b/src/public/index.html
@@ -121,6 +121,8 @@
 	<script src="vendors/angular-xeditable/dist/js/xeditable.js"></script>
 	<!-- Ng File Upload -->
 	<script src="vendors/ng-file-upload/ng-file-upload.js"></script>
+	<!-- Angular Base64 Upload -->
+	<script src="vendors/angular-base64-upload/dist/angular-base64-upload.js"></script>
 	<!-- Intro.JS-->
 	<script src="vendors/intro.js/intro.js"></script>
 	<!-- Angular Intro.JS-->
@@ -138,6 +140,7 @@
     <script src="../app/ente/ente.service.js"></script>
 
     <script src="../app/documentations/documentations.controller.js"></script>
+    <script src="../app/documentations/documentations.service.js"></script>
 
     <script src="../app/profile/profile.controller.js"></script>
     <!-- endbuild -->
