Iniciando integração com o cadastro de perfis a API

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -143,6 +143,7 @@
     <script src="../app/documentations/documentations.service.js"></script>
 
     <script src="../app/profile/profile.controller.js"></script>
+    <script src="../app/profile/profile.service.js"></script>
     <!-- endbuild -->
 
     <script src="app/html/templates.js"></script>
